--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body>
+<body background="background.jpg">
 <center>
   <h3 class="btn btn-info heading">Changing width, height and postion of a square in Realtime
     <br>
